=== HEAD

* Add static_cache plugin, for staticly caching all model instances, useful for model tables that don't change (jeremyevans)

* Add Model#freeze implementation to get a working frozen model object (jeremyevans)

* Add many_to_one_pk_lookup plugin, for using a simple primary key lookup for many_to_one associations (great with caching) (jeremyevans)

* Use bigint type instead of integer for Bignum generic type on SQLite (jeremyevans)

* Add Database#dump_foreign_key_migration for just dumping foreign key constraints to the schema dumper extension (jeremyevans)

* Dump foreign key constraints by default when using the schema dumper extension (jeremyevans)

* Don't raise an error when no indexes exist for a table when calling Database#indexes on the jdbc/sqlite adapter (jeremyevans)

* Copy composite foreign key constraints when emulating alter_table on SQLite (jeremyevans)

* Add Database#foreign_key_list for getting foreign key metadata for a given table on SQLite, MySQL, and PostgreSQL (jeremyevans)

* Add Dataset#to_hash_groups and #select_hash_groups for getting a hash with arrays of matching values (jeremyevans)

* Model#set_fields and #update_fields now respect :missing=>:skip and :missing=>:raise options for handling missing values (jeremyevans)

* The :on_update and :on_delete entries for foreign key can now take strings, which are used literally (jeremyevans)

* Add Database#convert_infinite_timestamps to the postgres adapter, can be set to :nil, :string, or :float (jeremyevans) (#454)

* Add Database#create_join_table and #drop_join_table for easily creating many-to-many join tables (jeremyevans)

* Fix Dataset#group_rollup/#group_cube on Microsoft SQL Server 2005 (jeremyevans)

* Add Dataset#explain on MySQL (jeremyevans)

* Change formatting and return value of Dataset#explain on SQLite (jeremyevans)

* Recognize unsigned tinyint types in the schema dumper (jeremyevans)
